nextgen/action-graph/tests/snapshots/action_graph_test__action_graph__sync_project__graphs_multiple.snap
---
source: nextgen/action-graph/tests/action_graph_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace" ]
    1 [ label="SyncSystemProject(foo)" ]
    2 [ label="SyncSystemProject(bar)" ]
    3 [ label="SyncSystemProject(qux)" ]
    2 -> 0 [ ]
    1 -> 0 [ ]
    1 -> 2 [ ]
    3 -> 0 [ ]
}

